add: files and dirs to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@ data/*
 test/*
 */data*
 */test/*
+
+**/.ipynb_checkpoints
+**/papers
+**/MobileNet.ipynb
+**/MobileNet
+**/SSD-keras
+**/SSD.TensorFlo
+**/ssd_mobilenet
+**/
+**/pascal.ipynb
+**/ssd-tensorflow
+**/tensorflow-eager-tutorials
+
+**/sloth
+**/*.zip
+**/dataset
+
+**/eval_summaries
+**/train_summaries
+**/last_weights
+**/best_weights
+**/pretrained_weights
+**/SSD Encoder and Decoder.ipynb
+**/test/images
+**/test/result
+**/test/*.py
+**/test/*.txt
+
